# dijkstra

./: .gitmodules  CMakeLists.txt  README.md  dijkstra.cpp  dijkstra.h  main.cpp
google-tests/: CMakeLists.txt
google-tests/lib/googlemock/: CMakeLists.txt
google-tests/source/: dijkstra_tests.cpp  graph_tests.cpp
google-tests/source/read_graph_files/: columns_greater_than_rows.txt  good_2.txt  incorrect_symbol.txt  incorrect_symbol_2.txt  not_rectangle_1.txt  not_rectangle_2.txt  not_rectangle_3.txt  rows_greater_than_columns.txt  weight_less_than_zero.txt
source/: dijkstra.cpp  dijkstra.h
source/graph/: graph.h
workdir/: file.txt
workdir/good images/: file.txt
workdir/old_files/: file 2.txt  file — копия 2.txt  file — копия.txt
